# c_memory

./: README.md
lib/: CMakeLists.txt  yaya_mem.h  yaya_memory.c  yaya_memory.h
test/: CMakeLists.txt  main.c
